apps/goatlint/src/snapshots/fixtures__cli_issue_10054@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: issue_10054
working directory: fixtures/cli
----------

  x eslint-plugin-import(no-cycle): Dependency cycle detected
   ,-[issue_10054/a.ts:1:19]
 1 | import { b } from "./b";
   :                   ^^^^^
 2 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ ./b (fixtures/cli/issue_10054/b.ts)
           │         ⬇ imports
           │    ./a (fixtures/cli/issue_10054/a.ts)
           ╰─────────╯ imports the current file

  x eslint-plugin-import(no-cycle): Dependency cycle detected
   ,-[issue_10054/b.ts:1:8]
 1 | import "./a";
   :        ^^^^^
 2 | 
   `----
  help: Refactor to remove the cycle. Consider extracting shared code into a separate module that both files can import.
  note: These paths form a cycle:
           ╭──▶ ./a (fixtures/cli/issue_10054/a.ts)
           │         ⬇ imports
           │    ./b (fixtures/cli/issue_10054/b.ts)
           ╰─────────╯ imports the current file

Found 0 warnings and 2 errors.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: LintFoundErrors
----------
